[project]
name = "maps"
version = "0.1.0"
description = "A project to visualize the provinces of the Emilia-Romagna region in Italy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "shapely>=2.1.1",
]

[project.scripts]
start-notebook = "start_notebook:main"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pre-commit>=4.2.0", "ruff>=0.11.11"]

