[project]
name = "maps"
version = "0.1.0"
description = "A project to visualize the provinces of the Emilia-Romagna region in Italy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "shapely>=2.1.1",
]

[project.scripts]
start-notebook = "start_notebook:main"

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pre-commit>=4.2.0", "ruff>=0.11.11"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []
# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
